# eve-l-preview

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
src/: color.rs  config.rs  constants.rs  cycle_state.rs  event_handler.rs  font.rs  hotkeys.rs  main.rs  persistence.rs  preview.rs  snapping.rs  thumbnail.rs  types.rs  x11_utils.rs
src/config/: daemon_state.rs  mod.rs  persistent.rs  profile.rs
src/gui/: constants.rs  manager.rs
src/gui/components/: hotkey_settings.rs  mod.rs  profile_selector.rs  settings_editor.rs  visual_settings.rs
src/ipc/: messages.rs  mod.rs
src/preview/: event_handler.rs  font.rs  font_discovery.rs  ipc_handler.rs  mod.rs  snapping.rs  thumbnail.rs
