[package]
name = "eve-l-preview"
version = "1.0.1"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
evdev = "0.12"
fontdue = "0.9"
