[package]
name = "eve-l-preview"
version = "1.0.1"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing", "allow-unsafe-code"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.19"
dirs = "5.0"
evdev = "0.12"
fontdue = "0.9"
clap = { version = "4.5", features = ["derive"] }

eframe = { version = "0.30", default-features = false, features = ["glow", "wayland", "x11"] }
egui = "0.30"
tray-icon = "0.17"  # System tray support
png = "0.17"  # PNG decoding for tray icon

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"  # GTK for tray-icon on Linux

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
nix = { version = "0.29", features = ["signal"] }
